CSS changes: - further optimization for smaller screens and mobile devices - filter bar now stays fixed at top of screen when scrolling past the header on mobile devices - additional padding / spacing on header
Markup changes:
- changed content of title tag
- added meta description tag for search results
- added an indicator to show current number of points in the avatar section

--- a/public/css/_576px.scss
+++ b/public/css/_576px.scss
@@ -73,3 +73,18 @@
       }
     }
   }
+footer {
+  .main {
+    .content.full {
+      nav {
+        ul {
+          li {
+            width:50%;
+            display:block;
+            // float:none;
+          }
+        }
+      }
+    }
+  }
+}
