--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -331,7 +331,7 @@ blockquote {
 }
 header {
   background: #333333;
-  height: 65px;
+  padding:7px 0;
   border-bottom: 6px solid #7a694b;
 }
 header .home {
@@ -885,6 +885,18 @@ ul#items {
   }
 
 }
+.fixed {
+   .filter {
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:9999;
+    box-shadow:0 0 10px dimGray;
+  }
+  .select2-container {
+    z-index:9999;
+  }
+}
 .filter label .select2-container .select2-choice .select2-arrow {
   background: url("http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/images/ui-icons_888888_256x240.png");
 }
@@ -1136,7 +1148,7 @@ ul#items {
   height: 158px;
   width: 100%;
   overflow: hidden;
-  z-index:5000;
+  // z-index:5000;
 }
 .listings .images img {
   min-height: 100%;
@@ -1330,7 +1342,6 @@ span.eyes.blink .eye {
     height: 1px;
     top: 2px;
 }
-
 .toaster {
     position: fixed;
     bottom: 30px;
@@ -1417,11 +1428,11 @@ span.eyes.blink .eye {
   }
 }
 .avatar {
-  float: right;
-  margin-left: 2em;
-  padding-top: 8px;
-  z-index: 9999;
-  position: relative; 
+  float:right;
+  margin-left:2em;
+  padding-top:4px;
+  z-index:9999;
+  position:relative; 
   > img {
     width: 40px;
     height: 40px;
@@ -1484,8 +1495,105 @@ span.eyes.blink .eye {
     }
   }
 }
+footer {
+  height:$footerHeight;
+  width: 100%;
+  bottom:0;
+  left:0;
+  margin: 0 auto;
+  position: absolute;
+  border-top: 6px solid #7a694b;
+  background: #333333;
+  .content {
+    width: 995px;
+    margin: 0 auto;
+  }
+  .main {
+    .content.full {
+      color:#a4a4a4;
+      nav {
+        border-top:1px solid lighten($darkgray, 5%);
+        border-bottom:1px solid lighten($darkgray, 5%);
+        > ul {
+          padding:2em 0;
+          list-style:none;
+          width:100%;
+          color:white;
+          > li {
+            width:25%;
+            padding:0 10px;
+            float:left;
+            &:last-child {
+            }
+          }
+          &:after {
+            content:' ';
+            display:block;
+            clear:both;
+          }
+        }
+        ul {
+          list-style:none;
+          padding-left:0;
+          i {
+            display:inline-block;
+            width:22px;
+            margin-right:1px;
+            text-align:center;
+          }
+          li {
+            margin-bottom:.5em;
+            font-size:1em;
+            h3 {
+              font-weight:400;
+            }
+          }
+        }
+      }
+    }
+    a {
+      color:#a4a4a4;
+      text-decoration:none;
+      &:hover {
+        color:$green;
+      }
+    }
+  }
+  .social {
+    padding:1em 0;
+    ul {
+      list-style:none;
+      padding:0;
+      li {
+        display:inline-block;
+        margin-right:10px;
+      }
+      li.right {
+        float:right;
+      }
+    }
+  }
+  .help {
+    padding:1em 0;
+    ul {
+      list-style:none;
+      padding:0;
+      li {
+        display:inline-block;
+        margin-right:1em;
+      }
+      li.right {
+        float:right;
+        margin-right:0;
+      }
+    }
+  }
+}
 @media only screen and (max-width: 1049px) {
   @import '1049px';
+}
+@media only screen and (max-width: 1013px) {
+  @import '1013px';
 }
 @media only screen and (max-width: 927px) {
   @import '927px';
@@ -1494,6 +1602,13 @@ span.eyes.blink .eye {
     .toaster {
         left: 50%;
         margin-left: -175px;
+    }
+    body {
+      margin:0;
+    }
+    footer {
+      position:relative;
+      height:auto;
     }
 }
 @media only screen and (max-width: 772px) {
@@ -1736,7 +1851,7 @@ aside.my_properties {
 #rental-list {
 	a {
 		color:inherit;
-    z-index:9999;
+    // z-index:9999;
     display:block;
 		text-decoration:none;
 	}
@@ -1865,100 +1980,7 @@ li.ui-state-focus {
     }
   }
 }
-footer {
-  height:$footerHeight;
-  width: 100%;
-  bottom:0;
-  left:0;
-  margin: 0 auto;
-  position: absolute;
-  border-top: 6px solid #7a694b;
-  background: #333333;
-  .content {
-    width: 995px;
-    margin: 0 auto;
-  }
-  .main {
-    .content.full {
-      color:#a4a4a4;
-      nav {
-        border-top:1px solid lighten($darkgray, 5%);
-        border-bottom:1px solid lighten($darkgray, 5%);
-        > ul {
-          padding:2em 0;
-          list-style:none;
-          width:100%;
-          color:white;
-          > li {
-            width:25%;
-            padding:0 10px;
-            float:left;
-            &:last-child {
-            }
-          }
-          &:after {
-            content:' ';
-            display:block;
-            clear:both;
-          }
-        }
-        ul {
-          list-style:none;
-          padding-left:0;
-          i {
-            display:inline-block;
-            width:22px;
-            margin-right:1px;
-            text-align:center;
-          }
-          li {
-            margin-bottom:.5em;
-            font-size:1em;
-            h3 {
-              font-weight:400;
-            }
-          }
-        }
-      }
-    }
-    a {
-      color:#a4a4a4;
-      text-decoration:none;
-      &:hover {
-        color:$green;
-      }
-    }
-  }
-  .social {
-    padding:1em 0;
-    ul {
-      list-style:none;
-      padding:0;
-      li {
-        display:inline-block;
-        margin-right:10px;
-      }
-      li.right {
-        float:right;
-      }
-    }
-  }
-  .help {
-    padding:1em 0;
-    ul {
-      list-style:none;
-      padding:0;
-      li {
-        display:inline-block;
-        margin-right:1em;
-      }
-      li.right {
-        float:right;
-        margin-right:0;
-      }
-    }
-  }
-}
+
 #list-canvas {
   padding:0;
   select, .ui-selectmenu-button, .ui-selectmenu {
